OC-535 ~ Updates parent pom for protocol adapter DLMS to use super pom.

--- a/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
@@ -12,25 +12,17 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>parent-pa-dlms</artifactId>
-  <groupId>org.opensmartgridplatform</groupId>
-  <version>5.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>parent-pa-dlms</name>
   <!-- Description, Organization, Licences, URL and Distribution Management 
     elements are needed for the maven-jxr-plugin to generate a maven site -->
   <description>Parent module.</description>
-  <organization>
-    <name>OSGP</name>
-    <url>http://opensmartgridplatform.org</url>
-  </organization>
-  <licenses>
-    <license>
-      <name>APACHE 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
-    </license>
-  </licenses>
-  <!-- URL is passed in as a maven argument: -Dmaven.site.url=http://my/url/for/the/site -->
-  <url>${maven.site.url}</url>
+  <parent>
+    <groupId>org.opensmartgridplatform</groupId>
+    <artifactId>super-osgp</artifactId>
+    <version>5.0.0-SNAPSHOT</version>
+    <relativePath>../../../super/pom.xml</relativePath>
+  </parent>
   <distributionManagement>
     <site>
       <id>pa-dlms</id>
@@ -39,440 +31,6 @@
       <url>${maven.site.distributionManagement.site.url}</url>
     </site>
   </distributionManagement>
-
-  <properties>
-    <module.baseUri>${project.baseUri}/../</module.baseUri>
-    <osgp.version>5.0.0-SNAPSHOT</osgp.version>
-    <osgp.dlms.version>5.0.0-SNAPSHOT</osgp.dlms.version>
-    <osgp.shared.version>5.0.0-SNAPSHOT</osgp.shared.version>
-    <osgp.jasper-interface.version>5.0.0-SNAPSHOT</osgp.jasper-interface.version>
-    <java.version>1.8</java.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring.version>5.1.5.RELEASE</spring.version>
-    <spring.data.version>2.1.5.RELEASE</spring.data.version>
-    <spring.wscore.version>3.0.7.RELEASE</spring.wscore.version>
-    <spring.wssecurity.version>3.0.7.RELEASE</spring.wssecurity.version>
-    <spring.wssupport.version>3.0.7.RELEASE</spring.wssupport.version>
-    <spring.ws.version>3.0.7.RELEASE</spring.ws.version>
-    <assertj.version>3.14.0</assertj.version>
-    <xmlunit.version>1.6</xmlunit.version>
-    <mockito.version>3.2.4</mockito.version>
-    <byte.buddy.version>1.10.5</byte.buddy.version>
-    <apache.wss4j.version>1.6.19</apache.wss4j.version>
-    <servlet.version>4.0.1</servlet.version>
-    <servlet.jstl.version>1.2</servlet.jstl.version>
-    <hibernate.version>5.4.1.Final</hibernate.version>
-    <postgresql.version>42.2.5</postgresql.version>
-    <junit.version>5.6.0-M1</junit.version>
-    <joda.version>2.10.1</joda.version>
-    <flyway.version>5.0.3</flyway.version>
-    <slf4j.version>1.7.26</slf4j.version>
-    <apache.commons.lang.version>3.8.1</apache.commons.lang.version>
-    <orika.version>1.5.4</orika.version>
-    <jxr.version>3.0.0</jxr.version>
-    <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
-    <maven.site.plugin>3.7.1</maven.site.plugin>
-    <apache.activemq.version>5.15.9</apache.activemq.version>
-    <commons.pool.version>2.6.1</commons.pool.version>
-    <apache.httpcomponents.version>4.5.7</apache.httpcomponents.version>
-    <logback.version>1.2.3</logback.version>
-    <logback.ext.version>0.1.5</logback.ext.version>
-    <apache.commons.schema>2.2.4</apache.commons.schema>
-    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
-    <maven.war.plugin.version>3.2.2</maven.war.plugin.version>
-    <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
-    <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
-    <netty.version>4.1.44.Final</netty.version>
-    <openmuc.jdlms.version>1.6.0</openmuc.jdlms.version>
-    <javax.inject.version>1</javax.inject.version>
-    <license.maven.plugin>3.0</license.maven.plugin>
-  </properties>
-
-  <repositories>
-    <repository>
-      <id>fuse-repo</id>
-      <name>Fuse Source</name>
-      <url>http://repo.fusesource.com/nexus/content/groups/public/</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>oss-sonatype</id>
-      <name>oss-sonatype</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>maven-repo1</id>
-      <name>Maven Repository</name>
-      <url>https://repo1.maven.org/maven2/</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <dependencyManagement>
-    <dependencies>
-      <!-- OpenMUC jDLMS -->
-      <dependency>
-        <groupId>org.openmuc</groupId>
-        <artifactId>jdlms</artifactId>
-        <version>${openmuc.jdlms.version}</version>
-        <exclusions>
-          <exclusion>
-            <!-- Exclude to ensure compatibility with (older) 1.51 users -->
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-
-      <!-- OSGP -->
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-dto</artifactId>
-        <version>${osgp.shared.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-dto</artifactId>
-        <version>${osgp.shared.version}</version>
-        <type>test-jar</type>
-      </dependency>
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>shared</artifactId>
-        <version>${osgp.shared.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>shared</artifactId>
-        <version>${osgp.shared.version}</version>
-        <type>test-jar</type>
-      </dependency>
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>jasper-interface</artifactId>
-        <version>${osgp.jasper-interface.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-dlms</artifactId>
-        <version>${osgp.dlms.version}</version>
-      </dependency>
-
-      <!-- Spring Framework -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-beans</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context-support</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-jdbc</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-orm</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-tx</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-
-      <!-- Spring JMS -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-jms</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-
-      <!-- Spring Data -->
-      <dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-jpa</artifactId>
-        <version>${spring.data.version}</version>
-      </dependency>
-
-      <!-- Spring WS -->
-      <dependency>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws-core</artifactId>
-        <version>${spring.wscore.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws-security</artifactId>
-        <version>${spring.wssecurity.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws-support</artifactId>
-        <version>${spring.wssupport.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws-test</artifactId>
-        <version>${spring.ws.version}</version>
-      </dependency>
-
-      <!-- javax inject -->
-      <dependency>
-        <groupId>javax.inject</groupId>
-        <artifactId>javax.inject</artifactId>
-        <version>${javax.inject.version}</version>
-      </dependency>
-
-      <!-- ws support -->
-      <dependency>
-        <groupId>org.apache.ws.security</groupId>
-        <artifactId>wss4j</artifactId>
-        <version>${apache.wss4j.version}</version>
-      </dependency>
-
-      <!-- Servlet API 3.0 -->
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>${servlet.version}</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>jstl</artifactId>
-        <version>${servlet.jstl.version}</version>
-      </dependency>
-
-      <!-- Joda Time (Date/Time functions) -->
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>${joda.version}</version>
-      </dependency>
-
-      <!-- Hibernate -->
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
-        <version>${hibernate.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>${hibernate.version}</version>
-      </dependency>
-
-      <!-- Flyway (DB Migration) -->
-      <dependency>
-        <groupId>org.flywaydb</groupId>
-        <artifactId>flyway-core</artifactId>
-        <version>${flyway.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>io.netty</groupId>
-        <artifactId>netty-all</artifactId>
-        <version>${netty.version}</version>
-        <scope>compile</scope>
-      </dependency>
-
-      <!-- Apache MQ client -->
-      <dependency>
-        <groupId>org.apache.activemq</groupId>
-        <artifactId>activemq-client</artifactId>
-        <version>${apache.activemq.version}</version>
-        <!-- Exclude the non-client JAR files -->
-        <exclusions>
-          <exclusion>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activeio-core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>kahadb</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.jasypt</groupId>
-            <artifactId>jasypt</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.apache.activemq.protobuf</groupId>
-            <artifactId>activemq-protobuf</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>commons-net</groupId>
-            <artifactId>commons-net</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.fusesource.mqtt-client</groupId>
-            <artifactId>mqtt-client</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>org.fusesource.fuse-extra</groupId>
-            <artifactId>fusemq-leveldb</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.activemq</groupId>
-        <artifactId>activemq-spring</artifactId>
-        <version>${apache.activemq.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.activemq</groupId>
-        <artifactId>activemq-pool</artifactId>
-        <version>${apache.activemq.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-pool2</artifactId>
-        <version>${commons.pool.version}</version>
-      </dependency>
-
-      <!-- Orika (mapping framework) -->
-      <dependency>
-        <groupId>ma.glasnost.orika</groupId>
-        <artifactId>orika-core</artifactId>
-        <version>${orika.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>${apache.httpcomponents.version}</version>
-      </dependency>
-
-      <!-- Testing dependencies -->
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-api</artifactId>
-        <version>${junit.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-        <version>${junit.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <version>${assertj.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>${mockito.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-junit-jupiter</artifactId>
-        <version>${mockito.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>net.bytebuddy</groupId>
-        <artifactId>byte-buddy</artifactId>
-        <version>${byte.buddy.version}</version>
-      </dependency>
-
-      <!-- PostgreSQL -->
-      <dependency>
-        <groupId>org.postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <version>${postgresql.version}</version>
-        <scope>test</scope>
-      </dependency>
-
-      <!-- Spring Test -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-test</artifactId>
-        <version>${spring.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>xmlunit</groupId>
-        <artifactId>xmlunit</artifactId>
-        <version>${xmlunit.version}</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-lang3</artifactId>
-        <version>${apache.commons.lang.version}</version>
-      </dependency>
-
-      <!-- Logging dependencies -->
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>${slf4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>${logback.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.logback-extensions</groupId>
-        <artifactId>logback-ext-spring</artifactId>
-        <version>${logback.ext.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.mycila</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <version>${license.maven.plugin}</version>
-      </dependency>
-
-    </dependencies>
-  </dependencyManagement>
 
   <build>
     <pluginManagement>
