--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/pom.xml
@@ -58,6 +58,14 @@
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-distributionautomation</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-adapter-ws-shared</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opensmartgridplatform</groupId>
+      <artifactId>osgp-ws-distributionautomation</artifactId>
+    </dependency>
     
     <!-- Spring Framework -->
     <dependency>
