SLIM-2102 fix flyway, adde FunctionalException

--- a/osgp/shared/shared/pom.xml
+++ b/osgp/shared/shared/pom.xml
@@ -167,7 +167,7 @@
     <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
-    </dependency>
+    </dependencw
 
     <!-- Quartz framework -->
     <dependency>
