FLEX-5185 ~ Implements transformer simulation in IEC61850 simulator

--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
@@ -1,10 +1,10 @@
 rtu.port=60102
-rtu.icd=Transformer.icd
-rtu.serverName=Transformer
+rtu.icd=TransformerSubstation.icd
+rtu.serverName=TransformerSubstation
 
 rtu.transformer.simulation.enabled=true
-rtu.transformer.simulation.file.power=transformer-p.csv
-rtu.transformer.simulation.file.temperature=t-transformer-t.csv
+rtu.transformer.1.power.file=transformer-p.csv
+rtu.transformer.1.temperature.file=transformer-t.csv
 
 #rtu.port=60122
 #rtu.icd=Pampus.icd
@@ -13,7 +13,7 @@ rtu.transformer.simulation.file.temperature=t-transformer-t.csv
 #rtu.serverName=WAGO61850Server
 #rtu.serverName=Bachmann61850Server
 
-rtu.stopGeneratingValues=false
+rtu.stopGeneratingValues=true
 
 rtu.updateValuesDelay=2000
 rtu.updateValuesPeriod=10000
