FLEX-5185 ~ Adds new simulation input files

--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
@@ -3,8 +3,8 @@ rtu.icd=TransformerSubstation.icd
 rtu.serverName=TransformerSubstation
 
 rtu.transformer.simulation.enabled=true
-rtu.transformer.1.power.file=transformer-p.csv
-rtu.transformer.1.temperature.file=transformer-t.csv
+#rtu.transformer.1.power.file=transformer-p.csv
+#rtu.transformer.1.temperature.file=transformer-t.csv
 
 #rtu.port=60122
 #rtu.icd=Pampus.icd
