FLEX-5156 ~ Updates Kafka producer
Allows properties to be set in properties file
Implements sending messages for power and internal temperature to
separate topics
Makes MeasurementReadingProducer implement InitializingBean and
Disposable bean

--- a/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
+++ b/osgp/platform/osgp-adapter-kafka-distributionautomation/src/main/resources/osgp-adapter-kafka-distributionautomation.properties
@@ -56,6 +56,17 @@ entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.ws.domain.entit
 entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.da.entities,org.opensmartgridplatform.domain.core.entities
 
 # =========================================================
+# KAFKA CONFIG
+# =========================================================
+distributionautomation.kafka.bootstrap.servers=localhost:9092,localhost:9093
+distributionautomation.kafka.key.serializer=org.apache.kafka.common.serialization.LongSerializer
+distributionautomation.kafka.value.serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
+distributionautomation.kafka.schema.registry.url=http://localhost:8081
+
+distributionautomation.kafka.topic.meterreading.transformer.power=meter-reading-power
+distributionautomation.kafka.topic.meterreading.transformer.internaltemperature=meter-reading-internal-temperature
+
+# =========================================================
 # MESSAGING CONFIG
 # =========================================================
 # ---------------------------------------------------------
