FLEX-5156 ~ Changes input file path for transformer simulation

--- a/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/protocol-simulator-iec61850/src/main/resources/osgp-simulator-protocol-iec61850.properties
@@ -3,6 +3,7 @@ rtu.icd=TransformerSubstation.icd
 rtu.serverName=TransformerSubstation
 
 rtu.transformer.simulation.enabled=true
+#rtu.transformer.simulation.input.file.path=/etc/osp/iec61850/input/
 #rtu.transformer.1.power.file=transformer-p.csv
 #rtu.transformer.1.temperature.file=transformer-t.csv
 
