--- a/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-protocol-adapter-iec60870/pom.xml
@@ -96,7 +96,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18</version>
+        <version>${maven.surefire.plugin.version}</version>
         <configuration>
           <!-- skip tests if value of skip.unit.tests property is true -->
           <skipTests>${skip.unit.tests}</skipTests>
@@ -110,7 +110,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.18</version>
+        <version>${maven.failsafe.plugin.version}</version>
         <executions>
           <execution>
             <id>integration-test</id>
