--- a/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
@@ -120,4 +120,24 @@
     </dependency>
 
   </dependencies>
+  
+  <build>
+    <plugins>
+      <!-- maven surefire plugin for running unit tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <configuration>
+          <!-- skip tests if value of skip.unit.tests property is true -->
+          <skipTests>${skip.unit.tests}</skipTests>
+          <!-- excludes integration tests when unit tests are run -->
+          <excludes>
+            <exclude>**/TestRunnerIT.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
 </project>
