--- a/osgp/protocol-adapter-oslp/oslp/pom.xml
+++ b/osgp/protocol-adapter-oslp/oslp/pom.xml
@@ -72,6 +72,20 @@
 
   <build>
     <plugins>
+      <!-- maven surefire plugin for running unit tests -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <configuration>
+          <!-- skip tests if value of skip.unit.tests property is true -->
+          <skipTests>${skip.unit.tests}</skipTests>
+          <!-- excludes integration tests when unit tests are run -->
+          <excludes>
+            <exclude>**/TestRunnerIT.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>com.github.igor-petruk.protobuf</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
