OC-535 ~ Updates Hibernate SQL dialect to PostgreSQL42Dialect.

--- a/osgp/protocol-adapter-iec61850/osgp-core-db-api-iec61850/src/main/resources/osgp-core-db-api-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/osgp-core-db-api-iec61850/src/main/resources/osgp-core-db-api-iec61850.properties
@@ -19,10 +19,11 @@ db.auto_commit=false
 db.idle_timeout=120000
 
 #Hibernate Configuration
-api.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-api.hibernate.format_sql=true
-api.hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-api.hibernate.show_sql=false
+# These properties are not read.
+#api.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+#api.hibernate.format_sql=true
+#api.hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+#api.hibernate.show_sql=false
 
 #EntityManager
 #Declares the base package of the entity classes
