--- a/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/test/resources/test.properties
+++ b/osgp/protocol-adapter-dlms/osgp-protocol-adapter-dlms/src/test/resources/test.properties
@@ -15,10 +15,11 @@ db.auto_commit=false
 dlms.port.server=6666
 
 #Hibernate Configuration
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.format_sql=true
-hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
-hibernate.show_sql=false
+# These properties are not read.
+#hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+#hibernate.format_sql=true
+#hibernate.physical_naming_strategy=org.opensmartgridplatform.shared.application.config.HibernateNamingStrategy
+#hibernate.show_sql=false
 
 #Flyway configuration
 flyway.initial.version=2014.001
