OC-535 ~ Fixates maven plugin versions.
Makes sure that the maven plugin version as defined in the super pom are used for the maven modules. This includes, war, jar, compiler, assembly, failsafe and surefire maven plugins.

--- a/osgp/platform/osgp-adapter-domain-admin/pom.xml
+++ b/osgp/platform/osgp-adapter-domain-admin/pom.xml
@@ -46,6 +46,17 @@
           </nonFilteredFileExtensions>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
 
