--- a/osgp/protocol-adapter-oslp/oslp/pom.xml
+++ b/osgp/protocol-adapter-oslp/oslp/pom.xml
@@ -72,6 +72,11 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>${maven.jar.plugin.version}</version>
+      </plugin>
       <!-- maven surefire plugin for running unit tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -100,6 +105,17 @@
         <configuration>
           <cleanOutputFolder>false</cleanOutputFolder>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
