--- a/osgp/platform/osgp-adapter-ws-admin/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-admin/pom.xml
@@ -57,7 +57,17 @@
           </webResources>
         </configuration>
       </plugin>
-
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
 
