--- a/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
@@ -33,6 +33,11 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>${maven.jar.plugin.version}</version>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
         <version>1.5</version>
