--- a/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
+++ b/osgp/protocol-adapter-iec60870/osgp-iec60870/pom.xml
@@ -123,6 +123,11 @@
   
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>${maven.jar.plugin.version}</version>
+      </plugin>
       <!-- maven surefire plugin for running unit tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -136,6 +141,17 @@
             <exclude>**/TestRunnerIT.java</exclude>
           </excludes>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
