--- a/osgp/shared/osgp-ws-core/pom.xml
+++ b/osgp/shared/osgp-ws-core/pom.xml
@@ -20,6 +20,7 @@
   </parent>
 
   <artifactId>osgp-ws-core</artifactId>
+  <packaging>jar</packaging>
 
   <build>
     <plugins>
@@ -55,6 +56,17 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
