--- a/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
+++ b/osgp/protocol-adapter-dlms/osgp-jasper-interface/pom.xml
@@ -8,7 +8,8 @@
         http://www.apache.org/licenses/LICENSE-2.0
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -40,7 +41,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>1.5</version>
+        <version>2.4</version>
         <executions>
           <execution>
             <id>jasper-wireless</id>
@@ -48,13 +49,10 @@
               <goal>xjc</goal>
             </goals>
             <configuration>
-              <schemaDirectory>src/main/webapp/wsdl/jasperwireless</schemaDirectory>
+              <sources>
+                <source>src/main/webapp/wsdl/jasperwireless/JasperAPI.xsd</source>
+              </sources>
               <packageName>com.jasperwireless.api.ws.service</packageName>
-              <wsdl>true</wsdl>
-              <xmlschema>false</xmlschema>
-              <staleFile>${project.build.directory}/jaxb2/.schema-smart-metering-configuration-stale-flag</staleFile>
-              <!-- USE THIS ONLY FOR THE FIRST EXECUTION -->
-              <clearOutputDir>false</clearOutputDir>
             </configuration>
           </execution>
         </executions>
