--- a/osgp/shared/osgp-ws-core/pom.xml
+++ b/osgp/shared/osgp-ws-core/pom.xml
@@ -27,7 +27,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>2.4</version>
+        <version>${jaxb2.maven.plugin.version}</version>
         <executions>
           <execution>
             <goals>
