--- a/super/pom.xml
+++ b/super/pom.xml
@@ -90,6 +90,7 @@
     <maven.assembly.plugin.version>3.2.0</maven.assembly.plugin.version>
     <maven.eclipse.plugin.version>2.10</maven.eclipse.plugin.version>
     <maven.exec.plugin.version>1.6.0</maven.exec.plugin.version>
+    <jaxb2.maven.plugin.version>2.4</jaxb2.maven.plugin.version>
     <apache.activemq.version>5.15.11</apache.activemq.version>
     <commons.pool.version>2.6.1</commons.pool.version>
     <logback.version>1.2.3</logback.version>
