FLEX-4683 ~ Adds hostname verification to web-demo-app.

--- a/public-lighting-demo-app/web-demo-app/src/main/resources/web-demo-app.properties
+++ b/public-lighting-demo-app/web-demo-app/src/main/resources/web-demo-app.properties
@@ -8,6 +8,9 @@ web.service.keystore.location=/etc/ssl/certs/
 web.service.keystore.password=1234
 web.service.keystore.type=pkcs12
 
+#Hostname verification: ALLOW_ALL_HOSTNAMES or BROWSER_COMPATIBLE_HOSTNAMES.
+web.service.hostname.verification.strategy=BROWSER_COMPATIBLE_HOSTNAMES
+
 # OSGP Client Certificate
 web.service.client.certificate=test-org.pfx
 
