FLEX-5197 ~ Reboots OSLP SSLD after configuration is set.

--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -64,6 +64,9 @@ oslp.security.provider=SunEC
 # Indicates whether a resume schedule is needed or not after a setLight
 oslp.execute.resume.schedule.after.set.light=true
 
+# Indicates whether a reboot is needed or not after a setConfiguration
+oslp.execute.reboot.after.set.configuration=true
+
 # Default GPS coordinates for switch devices in case specific location
 # information is not (yet) available for a device. 
 oslp.default.latitude=52.132635
