OC-537 MQTT Simulator

--- a/super/pom.xml
+++ b/super/pom.xml
@@ -308,6 +308,11 @@
       </dependency>
       <dependency>
         <groupId>org.opensmartgridplatform</groupId>
+        <artifactId>osgp-mqtt</artifactId>
+        <version>${osgp.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.opensmartgridplatform</groupId>
         <artifactId>cucumber-tests-core</artifactId>
         <version>${osgp.version}</version>
         <type>test-jar</type>
