--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/pom.xml
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/pom.xml
@@ -11,6 +11,7 @@
 
   <artifactId>osgp-protocol-adapter-mqtt</artifactId>
   <name>osgp-protocol-adapter-mqtt</name>
+  <packaging>war</packaging>
   <description>Protocol Adapter for MQTT</description>
 
   <parent>
@@ -23,6 +24,7 @@
   <properties>
     <display.version>${project.version}-${BUILD_TAG}</display.version>
     <skipITs>true</skipITs>
+    <hivemq-mqtt-client.version>1.1.3</hivemq-mqtt-client.version>
   </properties>
 
   <build>
@@ -96,12 +98,13 @@
 
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
-      <artifactId>jasper-interface</artifactId>
+      <artifactId>osgp-mqtt</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.opensmartgridplatform</groupId>
-      <artifactId>osgp-mqtt</artifactId>
+      <groupId>com.hivemq</groupId>
+      <artifactId>hivemq-mqtt-client</artifactId>
+      <version>${hivemq-mqtt-client.version}</version>
     </dependency>
 
     <dependency>
