--- a/super/pom.xml
+++ b/super/pom.xml
@@ -62,10 +62,10 @@
     <xmlunit.version>1.6</xmlunit.version>
     <mockito.core.version>3.2.4</mockito.core.version>
     <apache.wss4j.version>1.6.19</apache.wss4j.version>
-    <servlet.version>4.0.1</servlet.version>
+    <servlet.version>3.1.0</servlet.version>
     <servlet.jstl.version>1.2</servlet.jstl.version>
     <hibernate.version>5.4.10.Final</hibernate.version>
-    <hibernate.validator.version>6.1.0.Final</hibernate.validator.version>
+    <hibernate.validator.version>5.4.3.Final</hibernate.validator.version>
     <hibernate.jpa.version>1.0.2.Final</hibernate.jpa.version>
     <javax.validation.api.version>2.0.1.Final</javax.validation.api.version>
     <junit.version>5.6.0</junit.version>
@@ -554,7 +554,7 @@
 
       <!-- Hibernate validator -->
       <dependency>
-        <groupId>org.hibernate.validator</groupId>
+        <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate.validator.version}</version>
       </dependency>
