OC-537 Response flow

--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -191,6 +191,18 @@ jms.protocol.oslp.outgoing.requests.queue=protocol-oslp-elster.1_0.osgp-core.1_0
 # jms.protocol.oslp.outgoing.responses
 jms.protocol.oslp.outgoing.responses.queue=protocol-oslp-elster.1_0.osgp-core.1_0.responses
 
+#----------------------------------------------------------
+# jms.protocol.mqtt
+#----------------------------------------------------------
+# jms.protocol.mqtt.incoming.requests
+jms.protocol.mqtt.incoming.requests.queue=osgp-core.1_0.protocol-mqtt.1_0.requests
+# jms.protocol.mqtt.incoming.responses
+jms.protocol.mqtt.incoming.responses.queue=osgp-core.1_0.protocol-mqtt.1_0.responses
+# jms.protocol.mqtt.outgoing.requests
+jms.protocol.mqtt.outgoing.requests.queue=protocol-mqtt.1_0.osgp-core.1_0.requests
+# jms.protocol.iec61850.outgoing.responses
+jms.protocol.mqtt.outgoing.responses.queue=protocol-mqtt.1_0.osgp-core.1_0.responses
+
 # =========================================================
 # ===   LOG ITEM MESSAGING CONFIG                       ===
 # =========================================================
