--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
@@ -35,8 +35,9 @@ paging.maximum.pagesize=30
 paging.default.pagesize=15
 
 # MQTT
-mqtt.port.server=8883
-
+mqtt.broker.defaultPort=8883
+mqtt.broker.defaultTopics=+/measurement,+/congestion
+mqtt.brokoer.defaultQos=AT_LEAST_ONCE
 
 # =========================================================
 # MESSAGING CONFIG
@@ -51,7 +52,7 @@ jms.default.connection.queue.prefetch=1
 #----------------------------------------------------------
 # jms.mqtt.requests
 #----------------------------------------------------------
-jms.mqtt.requests.queue=protocol-mqtt.3.osgp-core.1_0.requests
+jms.mqtt.requests.queue=protocol-mqtt.1_0.osgp-core.1_0.requests
 jms.mqtt.requests.initial.redelivery.delay=300000
 jms.mqtt.requests.maximum.redelivery.delay=900000
 jms.mqtt.requests.redelivery.delay=300000
@@ -59,7 +60,7 @@ jms.mqtt.requests.redelivery.delay=300000
 #----------------------------------------------------------
 # jms.mqtt.responses
 #----------------------------------------------------------
-jms.mqtt.responses.queue=osgp-core.1_0.protocol-mqtt.3.responses
+jms.mqtt.responses.queue=osgp-core.1_0.protocol-mqtt.1_0.responses
 jms.mqtt.responses.initial.redelivery.delay=300000
 jms.mqtt.responses.maximum.redelivery.delay=900000
 jms.mqtt.responses.redelivery.delay=300000
@@ -72,12 +73,12 @@ jms.mqtt.log.item.requests.queue=osgp.logging.protocol
 #----------------------------------------------------------
 # jms.osgp.requests
 #----------------------------------------------------------
-jms.osgp.requests.queue=osgp-core.1_0.protocol-mqtt.3.requests
+jms.osgp.requests.queue=osgp-core.1_0.protocol-mqtt.1_0.requests
 
 #----------------------------------------------------------
 # jms.osgp.responses
 #----------------------------------------------------------
-jms.osgp.responses.queue=protocol-mqtt.3.osgp-core.1_0.responses
+jms.osgp.responses.queue=protocol-mqtt.1_0.osgp-core.1_0.responses
 
 # =========================================================
 # Recover key settings
@@ -99,7 +100,7 @@ schedule.retry.mqtt.backoff.multiplier=2
 schedule.retry.mqtt.backoff.exponential=true
 
 # device keys security
-encryption.key.path = /etc/osp/smartmetering/keys/platform/secret.aes
+encryption.key.path=/etc/osp/smartmetering/keys/platform/secret.aes
 
 encryption.rsa.private.key.path=/etc/osp/smartmetering/keys/platform/mqtt_device_keys_private
 encryption.rsa.public.key.path=/etc/osp/smartmetering/keys/platform/mqtt_device_keys_public
@@ -108,8 +109,8 @@ encryption.rsa.public.key.path=/etc/osp/smartmetering/keys/platform/mqtt_device_
 # Triggered Device Simulator Url
 #==========================================================
 
-triggered.simulator.url = https://localhost/osgp-simulator-mqtt-triggered/wakeup
-triggered.simulator.ipaddress = 127.0.0.1
+triggered.simulator.url=https://localhost/osgp-simulator-mqtt-triggered/wakeup
+triggered.simulator.ipaddress=127.0.0.1
 
 #Web service truststore
 web.service.truststore.location=/etc/ssl/certs/trust.jks
