OC-537 Response flow

--- a/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-adapter-mqtt/src/main/resources/osgp-adapter-protocol-mqtt.properties
@@ -37,7 +37,7 @@ paging.default.pagesize=15
 # MQTT
 mqtt.broker.defaultPort=8883
 mqtt.broker.defaultTopics=+/measurement,+/congestion
-mqtt.brokoer.defaultQos=AT_LEAST_ONCE
+mqtt.broker.defaultQos=AT_LEAST_ONCE
 
 # =========================================================
 # MESSAGING CONFIG
