OC-557: Sets max thread pool size.

--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
@@ -91,11 +91,11 @@ iec61850.icd.file.path=/the/file/path/serverModel.icd
 
 #Folder containing ICD files for IEC61850 devices that have a file name configured in
 #the protocol database.
-iec61850.icd.files.folder=/etc/osp/iec61850
+iec61850.icd.files.folder=/etc/osp/iec61850-server-models
 
 #Buffered reporting is used for production, default value is true.
 #Unbuffered reporting is used for development and testing, set value to false.
-iec61850.is.buffered.reporting.enabled=true
+iec61850.is.buffered.reporting.enabled=false
 
 # Default GPS coordinates for switch devices in case specific location
 # information is not (yet) available for a device.
@@ -124,6 +124,7 @@ jms.default.use.exponential.back.off=false
 jms.iec61850.requests.queue=protocol-iec61850.1_0.osgp-core.1_0.requests
 jms.iec61850.requests.concurrent.consumers=25
 jms.iec61850.requests.max.concurrent.consumers=250
+jms.iec61850.requests.max.thread.pool.size=250
 
 #----------------------------------------------------------
 # jms.outbound.osgp.core.responses
