OC-557: Reverts changes for (un)buffered report settings.

--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
@@ -91,11 +91,11 @@ iec61850.icd.file.path=/the/file/path/serverModel.icd
 
 #Folder containing ICD files for IEC61850 devices that have a file name configured in
 #the protocol database.
-iec61850.icd.files.folder=/etc/osp/iec61850-server-models
+iec61850.icd.files.folder=/etc/osp/iec61850
 
 #Buffered reporting is used for production, default value is true.
 #Unbuffered reporting is used for development and testing, set value to false.
-iec61850.is.buffered.reporting.enabled=false
+iec61850.is.buffered.reporting.enabled=true
 
 # Default GPS coordinates for switch devices in case specific location
 # information is not (yet) available for a device.
