Bug/oc 557/handle active mq oom (#226)
* OC-557: Sets the max thread pool size.

* OC-557: Sets max thread pool size.

* OC-557: Reverts changes for (un)buffered report settings.

--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
@@ -124,6 +124,7 @@ jms.default.use.exponential.back.off=false
 jms.iec61850.requests.queue=protocol-iec61850.1_0.osgp-core.1_0.requests
 jms.iec61850.requests.concurrent.consumers=25
 jms.iec61850.requests.max.concurrent.consumers=250
+jms.iec61850.requests.max.thread.pool.size=250
 
 #----------------------------------------------------------
 # jms.outbound.osgp.core.responses
