--- a/super/pom.xml
+++ b/super/pom.xml
@@ -82,7 +82,7 @@
     <orika.version>1.5.4</orika.version>
     <jxr.version>3.0.0</jxr.version>
     <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
-    <maven.site.plugin>3.8.2</maven.site.plugin>
+    <maven.site.plugin>3.9.0</maven.site.plugin>
     <maven.javadoc.version>3.1.1</maven.javadoc.version>
     <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
     <maven.war.plugin.version>3.2.3</maven.war.plugin.version>
@@ -1036,6 +1036,9 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
         <version>${versions.maven.plugin.version}</version>
+        <configuration>
+          <rulesUri>file://${maven.multiModuleProjectDirectory}/super/versions-plugin-rules.xml</rulesUri>
+        </configuration>
         <reportSets>
           <reportSet>
             <reports>
