OC-537 Not yet a war

--- a/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/pom.xml
+++ b/osgp/protocol-adapter-mqtt/osgp-protocol-simulator-mqtt/pom.xml
@@ -14,7 +14,7 @@ http://www.apache.org/licenses/LICENSE-2.0
 
   <groupId>org.opensmartgridplatform</groupId>
   <artifactId>osgp-protocol-simulator-mqtt</artifactId>
-  <packaging>war</packaging>
+<!--  <packaging>war</packaging>-->
   <name>osgp-protocol-simulator-mqtt</name>
   <description>Simulator for MQTT Protocol.</description>
 
