--- a/osgp/platform/parent-platform/pom.xml
+++ b/osgp/platform/parent-platform/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>super-osgp</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <version>5.0.0</version>
     <relativePath>../../../super/pom.xml</relativePath>
   </parent>
   <distributionManagement>
